[UPD] OpenApi doc with optional query parameters
